Fix positional projection serialization to be re-parseable

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Optimization
    • Fully Compatible
    • ALL
    • QO 2023-07-24, QO 2023-08-07, QO 2023-08-21, QO 2023-09-04, QO 2023-09-18
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When we have a query that uses positional projection on an array, the positional projection is serialized as, for example,

      { sub: { $id.$: true } }

      whereas the original (valid) syntax is

      { sub.$id.$: true }

      This results in this re-parse error:

      Was not able to re-parse queryStats key when reading queryStats. Status: Location31325: Unknown expression $id.$ 

       

      The test dbref3.js caught this bug and should be re-enabled when it's fixed.

            Assignee:
            Alyssa Clark (Inactive)
            Reporter:
            Will Buerger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: