SERVER-78945 Handle parsing DBRef positional subprojections